--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "IoT",
     "RTLS",
     "spatem",
-    "raddec"
+    "raddec",
+    "GeoJSON"
   ],
-  "version": "0.2.0",
+  "version": "0.3.0",
   "engines": {
     "node": ">=6.0.0"
   },
@@ -27,8 +28,8 @@
   },
   "dependencies": {
     "polygon-lookup": "^2.6.0",
-    "raddec": "^0.4.0",
-    "raddec-filter": ">=0.2.0"
+    "raddec": "^0.4.2",
+    "raddec-filter": ">=0.4.0"
   },
   "devDependencies": {},
   "bugs": {
